Remove unnecessary build files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,19 @@ ExcelReader/obj/Debug/net9.0/ExcelReader.csproj.FileListAbsolute.txt
 ExcelTest/bin/Debug/net9.0/ExcelReader.exe
 ExcelTest/obj/Debug/net9.0/ExcelTest.AssemblyInfo.cs
 ExcelTest/obj/Debug/net9.0/ExcelTest.csproj.FileListAbsolute.txt
+ExcelLibray/bin/Debug/net9.0/ExcelLibray.deps.json
+ExcelLibray/obj/Debug/net9.0/ExcelLibray.AssemblyInfo.cs
+ExcelLibray/obj/Debug/net9.0/ExcelLibray.GeneratedMSBuildEditorConfig.editorconfig
+ExcelReader/bin/Debug/net9.0/ExcelReader.deps.json
+ExcelReader/bin/Debug/net9.0/ExcelReader.runtimeconfig.json
+ExcelReader/obj/Debug/net9.0/apphost.exe
+ExcelReader/obj/Debug/net9.0/ExcelReader.AssemblyInfo.cs
+ExcelReader/obj/Debug/net9.0/ExcelReader.GeneratedMSBuildEditorConfig.editorconfig
+ExcelTest/bin/Debug/net9.0/ExcelReader.runtimeconfig.json
+ExcelTest/obj/Debug/net9.0/ExcelTest.AssemblyInfo.cs
+ExcelTest/obj/Debug/net9.0/ExcelTest.AssemblyInfo.cs
+#
+
+ExcelReader/bin/Debug/net9.0/ExcelReader.exe
+.gitignore
+ExcelReader/obj/Debug/net9.0/ExcelRea.8542BD21.Up2Date
