Removed build artifacts from tracking and updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,32 @@ ExcelTest/obj/Debug/net9.0/ExcelTest.AssemblyInfo.cs
 ExcelReader/bin/Debug/net9.0/ExcelReader.exe
 .gitignore
 ExcelReader/obj/Debug/net9.0/ExcelRea.8542BD21.Up2Date
+ExcelTest/obj/project.assets.json
+ExcelTest/obj/ExcelTest.csproj.nuget.g.targets
+ExcelTest/obj/ExcelTest.csproj.nuget.g.props
+ExcelTest/obj/ExcelTest.csproj.nuget.dgspec.json
+
+ExcelReader/obj/project.assets.json
+ExcelReader/obj/ExcelReader.csproj.nuget.g.targets
+ExcelReader/obj/ExcelReader.csproj.nuget.g.props
+ExcelReader/obj/ExcelReader.csproj.nuget.dgspec.json
+
+ExcelLibray/obj/project.assets.json
+ExcelLibray/obj/ExcelLibray.csproj.nuget.g.targets
+ExcelLibray/obj/ExcelLibray.csproj.nuget.g.props
+ExcelLibray/obj/ExcelLibray.csproj.nuget.dgspec.json
+#
+
+ExcelLibray/obj/ExcelLibray.csproj.nuget.dgspec.json
+ExcelLibray/obj/ExcelLibray.csproj.nuget.g.props
+
+ExcelLibray/obj/ExcelLibray.csproj.nuget.g.targets
+ExcelLibray/obj/project.assets.json
+ExcelReader/obj/ExcelReader.csproj.nuget.dgspec.json
+ExcelReader/obj/ExcelReader.csproj.nuget.g.props
+ExcelReader/obj/ExcelReader.csproj.nuget.g.targets
+ExcelReader/obj/project.assets.json
+ExcelTest/obj/ExcelTest.csproj.nuget.dgspec.json
+ExcelTest/obj/ExcelTest.csproj.nuget.g.props
+ExcelTest/obj/ExcelTest.csproj.nuget.g.targets
+ExcelTest/obj/project.assets.json
